fix: Configuration file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,14 +4,15 @@ spring:
       client:
         registration:
           cognito:
-            clientId: foo-bar-replace-me
-            clientSecret: ${COGNITO_CLIENT_SECRET}
+            clientId: XXXXXXXXXXXXXX
+            clientSecret: YYYYYYYYYYYYYYYYY
             scope: openid, profile, email
             redirectUriTemplate: http://localhost:8080/login/oauth2/code/cognito
-            clientName: rieckpil-test-client
+            clientName: demo
         provider:
           cognito:
-            issuerUri: https://cognito-idp.eu-central-1.amazonaws.com/eu-central-1_1c1xrYxCx
+            issuerUri: https://cognito-idp.us-east-1.amazonaws.com/us-east-1_jYUIUTcrZ
+            user-name-attribute: username
 
 cognito:
-  logoutUrl: https://rieckpil-test.auth.eu-central-1.amazoncognito.com/logout
+  logoutUrl: https://ZZZZZZZZZ.auth.us-east-1.amazoncognito.com/logout
